--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div class="container mt-3 p-3 bg-light border border-dark rounded">
+    <div class="d-flex flex-row">
+        <div class="col-md-8"><h6 class="text-left">my_weather_forecast</h6></div>
+            <div></div>
+        <div class="col-md-4"><h6 class="text-center">Weather Details here</h6>
+            <form>
+                <div class="form-group p-3">
+                    <div class="d-flex">    
+                        <input class="form-control" type="text" id="searchLocation" placeholder="Enter location...">
+                        <input class="btn btn-primary" type="submit" value="Submit">
+                    </div>
+                    <div>Past Locations</div>
+                </div>
+            </form>
+            <div class="p-3">Weather Details</div>
+                <div class="p-4">Feels like</div>
+                <div class="p-4">Humidity</div>
+                <div class="p-4">Wind</div>
+            <div class="p-3">Next 5 days</div>
+                <div class="p-4">Day+1</div>
+                <div class="p-4">Day+2</div>
+                <div class="p-4">Day+3</div>
+                <div class="p-4">Day+4</div>
+                <div class="p-4">Day+5</div>
+        </div>
+    </div>
+  </div>
