--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -7,6 +7,7 @@
                     type="text" 
                     id="searchLocation" 
                     placeholder="Enter location..."
+                    [formControl]="searchFormControl"
                 />
                 <button type="button" class="btn btn-success btn-md" (click)="search()">Search for the weather</button>
             </div>
