--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,7 +1,21 @@
-<div class="container mt-3 p-3 bg-light border border-dark rounded">
-    <div class="d-flex flex-row">
-        <div class="col-md-8"><h6 class="text-left">my_weather_forecast</h6></div>
-            <div></div>
-    <app-side-bar></app-side-bar>
+<div>
+    <div class="d-flex flex-row">   
+        <div class="d-flex flex-column justify-content-between w-75 padding">
+            <h6 class="text-left">my_weather_forecast</h6>
+            <div class="d-flex flex-row">
+                <div class="row-lg-8 p-3 display-1 fw-bold text-center ">{{ (weatherStateService.mostRecentWeather | async)?.current?.temperature}}</div> 
+                <div class="d-flex flex-column">
+                    <div class="row-lg-8 p-3 display-4 fw-bold text-center">{{ (geocodeStateService.mostRecentSearch | async)?.city }}</div>
+                    <div class="row-lg-8 p-3 fs-5 text-center">{{ (weatherStateService.mostRecentWeather | async)?.current?.dateTime| date:'short'}}</div> 
+                </div>
+                <div class="d-flex flex-column">
+                    <div class="row-lg-8 p-3 display-4 text-center" *ngIf="(weatherStateService.mostRecentWeather | async)?.current?.mainDescription">IMAGE HERE</div>
+                    <div class="row-lg-8 p-3 display-6 text-center">{{ (weatherStateService.mostRecentWeather | async)?.current?.mainDescription }}</div>
+                </div>
+            </div> 
+        </div>
+        <app-side-bar></app-side-bar>
     </div>
-  </div>
+        
+</div>
+
