--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
-<div><h6 class="text-center">Weather Details here</h6>
+<div>
     <form>
         <div class="form-group p-3">
-            <div class="d-flex">    
+            <div class="d-flex p-3  ">    
                 <input 
                     class="form-control" 
                     type="text" 
@@ -11,18 +11,39 @@
                 />
                 <button type="button" class="btn btn-success btn-md" (click)="search()">Search for the weather</button>
             </div>
-            <div>Past Locations</div>
         </div>
     </form>
-    <div class="p-3">Weather Details</div>
-        <div class="p-4">Feels like</div>
-        <div class="p-4">Humidity</div>
-        <div class="p-4">Wind</div>
-    <div class="p-3">Next 5 days</div>
-        <div class="p-4">Day+1</div>
-        <div class="p-4">Day+2</div>
-        <div class="p-4">Day+3</div>
-        <div class="p-4">Day+4</div>
-        <div class="p-4">Day+5</div>
+    <div class="display-6 pb-4">Past Locations</div>
+    <hr>
+    <div class="display-6 pb-4">Weather Details</div>
+    <div class="container">
+        <div class="row">
+          <div class="col pb-4">Feels like</div>
+          <div class="col pb-4">{{ (weatherStateService.mostRecentWeather | async)?.current?.feelsLike }}</div>
+          <div class="w-100"></div>
+          <div class="col pb-4">UV Index</div>
+          <div class="col pb-4">{{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}</div>
+        </div>
+    </div>  
+    <hr>
+    <div class="display-6 pb-4">Next 5 days</div>
+    <div class="container">
+        <div class="row">
+            <div class="col pb-4">Day+1</div>
+            <div class="col pb-4">result</div>
+            <div class="w-100"></div>
+            <div class="col pb-4">Day+2</div>
+            <div class="col pb-4">result</div>
+            <div class="w-100"></div>
+            <div class="col pb-4">Day+3</div>
+            <div class="col pb-4">result</div>
+            <div class="w-100"></div>
+            <div class="col pb-4">Day+4</div>
+            <div class="col pb-4">result</div>
+            <div class="w-100"></div>
+            <div class="col pb-4">Day+5</div>
+            <div class="col pb-4">result</div>
+        </div>
+    </div>
 </div>
 
