--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,49 +1,56 @@
 <div>
-    <form>
-        <div class="form-group p-3">
-            <div class="d-flex p-3  ">    
-                <input 
-                    class="form-control" 
-                    type="text" 
-                    id="searchLocation" 
-                    placeholder="Enter location..."
-                    [formControl]="searchFormControl"
-                />
-                <button type="button" class="btn btn-success btn-md" (click)="search()">Search for the weather</button>
-            </div>
-        </div>
-    </form>
-    <div class="display-6 pb-4">Past Locations</div>
-    <hr>
-    <div class="display-6 pb-4">Weather Details</div>
-    <div class="container">
-        <div class="row">
-          <div class="col pb-4">Feels like</div>
-          <div class="col pb-4">{{ (weatherStateService.mostRecentWeather | async)?.current?.feelsLike }}</div>
-          <div class="w-100"></div>
-          <div class="col pb-4">UV Index</div>
-          <div class="col pb-4">{{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}</div>
-        </div>
-    </div>  
-    <hr>
-    <div class="display-6 pb-4">Next 5 days</div>
-    <div class="container">
-        <div class="row">
-            <div class="col pb-4">Day+1</div>
-            <div class="col pb-4">result</div>
-            <div class="w-100"></div>
-            <div class="col pb-4">Day+2</div>
-            <div class="col pb-4">result</div>
-            <div class="w-100"></div>
-            <div class="col pb-4">Day+3</div>
-            <div class="col pb-4">result</div>
-            <div class="w-100"></div>
-            <div class="col pb-4">Day+4</div>
-            <div class="col pb-4">result</div>
-            <div class="w-100"></div>
-            <div class="col pb-4">Day+5</div>
-            <div class="col pb-4">result</div>
-        </div>
+  <form>
+    <div class="form-group p-3">
+      <div class="d-flex p-3">
+        <input
+          class="form-control"
+          type="text"
+          id="searchLocation"
+          placeholder="Enter location..."
+          [formControl]="searchFormControl"
+        />
+        <button type="button" class="btn btn-success btn-md" (click)="search()">
+          Search for the weather
+        </button>
+      </div>
     </div>
+  </form>
+  <div class="display-6 pb-4">Past Locations</div>
+  <hr />
+  <div class="display-6 pb-4">Weather Details</div>
+  <div class="container">
+    <div class="row">
+      <div class="col pb-4">Feels like</div>
+      <div class="col pb-4">
+        {{
+          (weatherStateService.mostRecentWeather | async)?.current?.feelsLike
+        }}
+      </div>
+      <div class="w-100"></div>
+      <div class="col pb-4">UV Index</div>
+      <div class="col pb-4">
+        {{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="display-6 pb-4">Next 5 days</div>
+  <div class="container">
+    <div class="row">
+      <div class="col pb-4">Day+1</div>
+      <div class="col pb-4">result</div>
+      <div class="w-100"></div>
+      <div class="col pb-4">Day+2</div>
+      <div class="col pb-4">result</div>
+      <div class="w-100"></div>
+      <div class="col pb-4">Day+3</div>
+      <div class="col pb-4">result</div>
+      <div class="w-100"></div>
+      <div class="col pb-4">Day+4</div>
+      <div class="col pb-4">result</div>
+      <div class="w-100"></div>
+      <div class="col pb-4">Day+5</div>
+      <div class="col pb-4">result</div>
+    </div>
+  </div>
 </div>
-
