--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<div class="padding"><router-outlet #outlet="outlet"></router-outlet></div>
+<div class="h-100 w-100"><router-outlet #outlet="outlet"></router-outlet></div>
