--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="blur padding">
   <form>
     <div class="form-group p-3">
       <div class="d-flex p-3">
@@ -18,27 +18,42 @@
   <div class="display-6 pb-4">Past Locations</div>
   <hr />
   <div class="display-6 pb-4">Weather Details</div>
-  <div class="container">
-    <div class="row">
-      <div class="col pb-4">Feels like</div>
-      <div class="col pb-4">
+  <div class="container d-flex flex-column">
+    <div class="d-flex flex-row justify-content-between">
+      <span>Feels like</span>
+      <span>
         {{
           (weatherStateService.mostRecentWeather | async)?.current?.feelsLike
-        }}
-      </div>
-      <div class="w-100"></div>
-      <div class="col pb-4">UV Index</div>
-      <div class="col pb-4">
+        }}°
+      </span>
+    </div>
+    <div class="d-flex flex-row justify-content-between">
+      <span>UV Index</span>
+      <span>
         {{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}
-      </div>
+      </span>
     </div>
   </div>
   <hr />
   <div class="display-6 pb-4">Next 5 days</div>
-  <div class="container">
-    <div class="row">
+  <div class="container d-flex flex-column">
+    <ng-container
+      *ngFor="
+        let weather of (weatherStateService.mostRecentWeather | async)?.daily
+          | slice: 1:6;
+        index as i
+      "
+    >
+      <div>
+        <div class="d-flex flex-row justify-content-between">
+          <span>{{ weather.dateTime | date: "EEEE d" }}</span>
+          <span>{{ weather.temperature }}°</span>
+        </div>
+      </div>
+    </ng-container>
+    <!-- <div class="row">
       <div class="col pb-4">Day+1</div>
-      <div class="col pb-4">result</div>
+      <div class="col pb-4"></div>
       <div class="w-100"></div>
       <div class="col pb-4">Day+2</div>
       <div class="col pb-4">result</div>
@@ -51,6 +66,6 @@
       <div class="w-100"></div>
       <div class="col pb-4">Day+5</div>
       <div class="col pb-4">result</div>
-    </div>
+    </div> -->
   </div>
 </div>
