--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,55 +1,52 @@
-<div>
-  <div class="d-flex flex-row align-items-stretch justify-content-end">
-    <div class="d-flex flex-column justify-content-between w-75 padding">
-      <h6 class="text-left">my_weather_forecast</h6>
-      <div class="d-flex flex-row w-75">
+<div
+  class="d-flex flex-row align-items-stretch justify-content-end h-100 w-100"
+>
+  <div class="d-flex flex-column justify-content-between w-75 padding">
+    <h6 class="text-left">my_weather_forecast</h6>
+    <div class="d-flex flex-row w-75">
+      <div
+        class="row-lg-8 p-3 display-1 fw-bold text-center"
+        *ngIf="
+          (weatherStateService.mostRecentWeather | async)?.current?.temperature
+        "
+      >
+        {{
+          (weatherStateService.mostRecentWeather | async)?.current?.temperature
+        }}°
+      </div>
+      <div class="d-flex flex-column">
+        <div class="row-lg-8 p-3 display-4 fw-bold text-center">
+          {{ (geocodeStateService.mostRecentSearch | async)?.city }}
+        </div>
+        <div class="row-lg-8 p-3 fs-5 text-center">
+          {{
+            (weatherStateService.mostRecentWeather | async)?.current?.dateTime
+              | date: "MM/dd hh:mm"
+          }}
+        </div>
+      </div>
+      <div class="d-flex flex-column">
         <div
-          class="row-lg-8 p-3 display-1 fw-bold text-center"
+          class="row-lg-8 p-3 display-4 text-center"
           *ngIf="
             (weatherStateService.mostRecentWeather | async)?.current
-              ?.temperature
+              ?.mainDescription
           "
         >
+          <img
+            [src]="
+              (weatherStateService.mostRecentWeather | async)?.current?.iconUrl
+            "
+          />
+        </div>
+        <div class="row-lg-8 p-3 display-6 text-center">
           {{
             (weatherStateService.mostRecentWeather | async)?.current
-              ?.temperature
-          }}°
-        </div>
-        <div class="d-flex flex-column">
-          <div class="row-lg-8 p-3 display-4 fw-bold text-center">
-            {{ (geocodeStateService.mostRecentSearch | async)?.city }}
-          </div>
-          <div class="row-lg-8 p-3 fs-5 text-center">
-            {{
-              (weatherStateService.mostRecentWeather | async)?.current?.dateTime
-                | date: "MM/dd hh:mm"
-            }}
-          </div>
-        </div>
-        <div class="d-flex flex-column">
-          <div
-            class="row-lg-8 p-3 display-4 text-center"
-            *ngIf="
-              (weatherStateService.mostRecentWeather | async)?.current
-                ?.mainDescription
-            "
-          >
-            <img
-              [src]="
-                (weatherStateService.mostRecentWeather | async)?.current
-                  ?.iconUrl
-              "
-            />
-          </div>
-          <div class="row-lg-8 p-3 display-6 text-center">
-            {{
-              (weatherStateService.mostRecentWeather | async)?.current
-                ?.mainDescription
-            }}
-          </div>
+              ?.mainDescription
+          }}
         </div>
       </div>
     </div>
-    <app-side-bar></app-side-bar>
   </div>
+  <app-side-bar></app-side-bar>
 </div>
