--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div class="blur padding">
+<div class="blur padding h-100">
   <form>
     <div class="form-group p-3">
       <div class="d-flex p-3">
@@ -27,7 +27,7 @@
         }}°
       </span>
     </div>
-    <div class="d-flex flex-row justify-content-between">
+    <div class="d-flex flex-row">
       <span>UV Index</span>
       <span>
         {{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}
@@ -36,7 +36,7 @@
   </div>
   <hr />
   <div class="display-6 pb-4">Next 5 days</div>
-  <div class="container d-flex flex-column">
+  <div class="container d-flex flex-column justify-content-between h-50">
     <ng-container
       *ngFor="
         let weather of (weatherStateService.mostRecentWeather | async)?.daily
@@ -44,28 +44,7 @@
         index as i
       "
     >
-      <div>
-        <div class="d-flex flex-row justify-content-between">
-          <span>{{ weather.dateTime | date: "EEEE d" }}</span>
-          <span>{{ weather.temperature }}°</span>
-        </div>
-      </div>
+      <app-weather-data-row [weather]="weather"></app-weather-data-row>
     </ng-container>
-    <!-- <div class="row">
-      <div class="col pb-4">Day+1</div>
-      <div class="col pb-4"></div>
-      <div class="w-100"></div>
-      <div class="col pb-4">Day+2</div>
-      <div class="col pb-4">result</div>
-      <div class="w-100"></div>
-      <div class="col pb-4">Day+3</div>
-      <div class="col pb-4">result</div>
-      <div class="w-100"></div>
-      <div class="col pb-4">Day+4</div>
-      <div class="col pb-4">result</div>
-      <div class="w-100"></div>
-      <div class="col pb-4">Day+5</div>
-      <div class="col pb-4">result</div>
-    </div> -->
   </div>
 </div>
