--- a/src/app/home/components/side-bar/side-bar.component.css
+++ b/src/app/home/components/side-bar/side-bar.component.css
@@ -5,3 +5,16 @@
 .padding {
   padding: 24px;
 }
+
+input,
+input:valid {
+  background-color: transparent;
+  border: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
