async pipe to past locations

--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -20,6 +20,14 @@
   </form>
   <hr />
   <div class="display-6 pb-4">Past Locations</div>
+  <ng-container
+    *ngFor="
+      let cities of localStorageService.mostRecentLocalStorage | async;
+      index as i
+    "
+  >
+    <div>{{ cities.charAt(0).toUpperCase() + cities.slice(1) }}</div>
+  </ng-container>
   <hr />
   <div class="display-6 pb-4">Weather Details</div>
   <div class="container d-flex flex-column">
