--- a/src/app/home/components/side-bar/side-bar.component.css
+++ b/src/app/home/components/side-bar/side-bar.component.css
@@ -1,4 +1,17 @@
+* {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+input[type="text"] {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+::placeholder {
+  color: rgba(111, 111, 111, 0.5);
+  opacity: 1;
+}
 .blur {
+  background-color: rgba(3, 30, 73, 0.25);
   backdrop-filter: blur(10px);
 }
 
