--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,19 +1,16 @@
 <div class="blur padding h-100">
   <form (ngSubmit)="search()">
-    <div class="form-group pt-5">
+    <div class="form-group pt-3">
       <div class="d-flex">
         <input
           class="textbar display-6"
-          style="width: 450px"
+          style="width: 450px; height: 65px"
           type="text"
           id="searchLocation"
           placeholder="Enter location..."
           [formControl]="searchFormControl"
         />
-        <button
-          type="submit"
-          class="btn btn-outline-dark btn-lg bi-search px-4"
-        ></button>
+        <button type="submit" class="btn btn-lg bi-search px-4"></button>
       </div>
     </div>
   </form>
@@ -28,7 +25,7 @@
     <div class="p-2">
       <button
         type="button"
-        class="btn btn btn-secondary btn-md p-2"
+        class="btn btn btn-link btn-block p-2"
         (click)="researchLocation(city)"
       >
         {{ city | titlecase }}
@@ -40,22 +37,23 @@
   <div class="container d-flex flex-column">
     <div class="d-flex flex-row justify-content-between">
       <span>Feels like</span>
-      <span>
+      <div class="w-50">
         {{
           (weatherStateService.mostRecentWeather | async)?.current?.feelsLike
+            | number: "1.0-0"
         }}°
-      </span>
+      </div>
     </div>
     <div class="d-flex flex-row justify-content-between">
       <span>UV Index</span>
-      <span>
+      <div class="w-50">
         {{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}
-      </span>
+      </div>
     </div>
   </div>
   <hr />
   <div class="display-6 pb-4">Next 5 days</div>
-  <div class="container d-flex flex-column justify-content-between h-50">
+  <div class="container d-flex flex-column justify-content-between h-25">
     <ng-container
       *ngFor="
         let weather of (weatherStateService.mostRecentWeather | async)?.daily
