--- a/src/app/home/components/weather-data-row/weather-data-row.component.html
+++ b/src/app/home/components/weather-data-row/weather-data-row.component.html
@@ -1,10 +1,10 @@
 <div class="h-100 w-100">
   <div class="d-flex flex-row justify-content-between">
-    <span>{{ weather.dateTime | date: "EEEE d" }}</span>
-    <span>{{ weather.temperature }}°</span>
+    <div class="w-50">{{ weather.dateTime | date: "EEEE d" }}</div>
+    <div class="w-50">{{ weather.temperature | number: "1.0-0" }}°</div>
     <button
       type="button"
-      class="btn btn-outline-dark"
+      class="btn"
       (click)="collapse.toggle()"
       [attr.aria-expanded]="!isCollapsed"
       aria-controls="collapseExample"
@@ -21,13 +21,18 @@
     </button>
   </div>
   <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
-    <div
-      class="d-flex flex-row justify-content-between p-3 border border-dark rounded"
-    >
-      <div>Feels Like</div>
-      <span>{{ weather.feelsLike }}</span>
-      <div>UV Index</div>
-      <span>{{ weather.uvIndex }}</span>
+    <div class="d-flex flex-column justify-content-between">
+      <div class="d-flex flex-row justify-content-between">
+        <div class="w-50">Feels like</div>
+        <div class="w-50">{{ weather.feelsLike | number: "1.0-0" }}</div>
+        <div style="width: 44px; height: 38px"></div>
+      </div>
+      <div class="d-flex flex-row justify-content-between">
+        <div class="w-50">UV index</div>
+        <div class="w-50">{{ weather.uvIndex }}</div>
+        <div style="width: 42px; height: 38px"></div>
+      </div>
     </div>
+    <hr />
   </div>
 </div>
