--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -9,6 +9,7 @@
           id="searchLocation"
           placeholder="Enter location..."
           [formControl]="searchFormControl"
+          [ngbTypeahead]="autoComplete"
         />
         <button
           type="submit"
