autocomplete geocode api call update

--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -10,6 +10,8 @@
           placeholder="Enter location..."
           [formControl]="searchFormControl"
           [ngbTypeahead]="autoComplete"
+          [resultFormatter]="formatter"
+          [inputFormatter]="formatter"
         />
         <button
           type="submit"
