--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -22,7 +22,8 @@
   <div class="display-6 pb-4">Past Locations</div>
   <ng-container
     *ngFor="
-      let city of localStorageService.mostRecentLocalStorage | async;
+      let previousLocation of localStorageService.mostRecentLocalStorage
+        | async;
       index as i
     "
   >
@@ -30,9 +31,9 @@
       <button
         type="button"
         class="btn btn btn-secondary btn-md p-2"
-        (click)="researchLocation(city)"
+        (click)="researchLocation(previousLocation)"
       >
-        {{ city | titlecase }}
+        {{ previousLocation.city | titlecase }}
       </button>
     </div>
   </ng-container>
