--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -29,13 +29,13 @@
     "
   >
     <div class="p-2">
-      <button
+      <!-- <button
         type="button"
         class="btn btn btn-secondary btn-md p-2"
         (click)="researchLocation(previousLocation)"
       >
         {{ previousLocation | titlecase }}
-      </button>
+      </button> -->
     </div>
   </ng-container>
   <hr />
