--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,60 +1,81 @@
 <div class="d-flex flex-row justify-content-between h-100 w-100">
-  <div class="d-flex flex-column w-50">
+  <div class="padding d-flex flex-column w-75">
     <h6 class="h-50">my_weather_forecast</h6>
-    <!-- City and local Time -->
+
     <div class="d-flex flex-column">
-      <div class="display-4 fw-bold text-center">
+      <!-- City -->
+      <div class="heading">
         {{ (geocodeStateService.mostRecentSearch | async)?.city }}
       </div>
-      <div class="fs-5 text-center display-6 h-50">
+      <!-- Date -->
+      <div class="h-50 sub-heading">
         {{
           (weatherStateService.mostRecentWeather | async)?.current?.zonedDate
             | date : "fullDate"
         }}
       </div>
-      <div class="fs-5 text-center display-6 h-50">
+      <!-- TIME  -->
+      <div class="h-50 sub-heading">
         {{
           (weatherStateService.mostRecentWeather | async)?.current?.zonedDate
             | date : "mediumTime"
         }}
       </div>
-      <div class="fs-5 text-center display-6 h-50">
-        {{ (weatherStateService.mostRecentWeather | async)?.current?.dateTime }}
-      </div>
     </div>
     <!-- Weather Icon and Description -->
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-row">
+      <div class="box icon-padding">
+        <div
+          *ngIf="
+            (weatherStateService.mostRecentWeather | async)?.current
+              ?.mainDescription
+          "
+        >
+          <img
+            [src]="
+              (weatherStateService.mostRecentWeather | async)?.current?.iconUrl
+            "
+          />
+        </div>
+        <div class="content">
+          {{
+            (weatherStateService.mostRecentWeather | async)?.current
+              ?.mainDescription
+          }}
+        </div>
+      </div>
+      <!-- Temperature -->
       <div
+        class="box"
         *ngIf="
-          (weatherStateService.mostRecentWeather | async)?.current
-            ?.mainDescription
+          (weatherStateService.mostRecentWeather | async)?.current?.temperature
         "
       >
-        <img
-          [src]="
-            (weatherStateService.mostRecentWeather | async)?.current?.iconUrl
-          "
-        />
+        <div class="temp">
+          {{
+            (weatherStateService.mostRecentWeather | async)?.current
+              ?.temperature | number : "1.0-0"
+          }}°
+        </div>
       </div>
-      <div>
-        {{
-          (weatherStateService.mostRecentWeather | async)?.current
-            ?.mainDescription
-        }}
+      <!-- F/C Button -->
+      <div class="temp-unit-box">
+        <button
+          type="button"
+          (click)="toggleUnit('f')"
+          [disabled]="tempUnit === 'f'"
+        >
+          F
+        </button>
+        <button
+          type="button"
+          (click)="toggleUnit('c')"
+          [disabled]="tempUnit === 'c'"
+        >
+          C
+        </button>
       </div>
-    </div>
-    <!-- Temperature -->
-    <div
-      class="p-3 display-1 fw-bold text-center"
-      *ngIf="
-        (weatherStateService.mostRecentWeather | async)?.current?.temperature
-      "
-    >
-      {{
-        (weatherStateService.mostRecentWeather | async)?.current?.temperature
-          | number : "1.0-0"
-      }}°
     </div>
   </div>
-  <app-side-bar class="w-50"></app-side-bar>
+  <app-side-bar></app-side-bar>
 </div>
