--- a/src/app/home/components/home/home.component.css
+++ b/src/app/home/components/home/home.component.css
@@ -2,15 +2,61 @@
   color: rgba(255, 255, 255);
 }
 .padding {
-  padding-top: 80px;
-  padding-left: 75px;
-  padding-bottom: 45px;
+  padding: 80px 75px 45px 75px;
+}
+
+.heading {
+  font-size: 4rem;
+  font-weight: 600;
+  text-shadow: 2px 2px 4px #4e4e4e;
+}
+
+.sub-heading {
+  font-size: 2rem;
+  font-weight: 200;
+  text-shadow: 2px 2px 4px #4e4e4e;
+}
+.content {
+  font-size: 2rem;
+  font-weight: 200;
+  text-shadow: 2px 2px 4px #4e4e4e;
+}
+
+.temp {
+  font-size: 8rem;
+  line-height: 90%;
+  height: 100%;
+  text-align: center;
+  font-weight: 600;
+  text-shadow: 2px 2px 4px #4e4e4e;
+  padding-top: 1rem;
+}
+
+button {
+  border: none;
+  padding: 0;
+  background: none;
+  text-shadow: 2px 2px 4px #4e4e4e;
+  font-size: 2rem;
+}
+img {
+  height: 100%;
+}
+
+.icon-padding {
+  padding-right: 45px;
 }
 
 .box {
-  justify-content: space-between;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
-img {
-  height: 100%;
+.temp-unit-box {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: flex-end;
 }
