--- a/src/app/home/components/side-bar/side-bar.component.html
+++ b/src/app/home/components/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div class="blur padding h-100">
+<div class="blur padding">
   <form (ngSubmit)="search()">
     <div class="form-group pt-3">
       <div class="d-flex">
@@ -20,7 +20,7 @@
     </div>
   </form>
   <hr />
-  <div class="display-6 pb-4">Past Locations</div>
+  <div class="heading">Past Locations</div>
   <ng-container
     *ngFor="
       let previousLocation of localStorageService.mostRecentLocalStorage
@@ -28,7 +28,7 @@
       index as i
     "
   >
-    <div class="p-2">
+    <div class="heading">
       <!-- <button
         type="button"
         class="btn btn btn-secondary btn-md p-2"
@@ -39,35 +39,62 @@
     </div>
   </ng-container>
   <hr />
-  <div class="display-6 pb-4">Weather Details</div>
-  <div class="container d-flex flex-column">
-    <div class="d-flex flex-row justify-content-between">
-      <span>Feels like</span>
-      <div class="w-50">
+  <div class="heading">Weather Details</div>
+  <div class="row">
+    <div class="box">
+      <p class="upper-text">
+        {{
+          (weatherStateService.mostRecentWeather | async)?.current?.sunrise
+            | date : "shortTime"
+        }}
+      </p>
+      <p class="lower-text">Sunrise</p>
+    </div>
+    <div class="box">
+      <p class="upper-text">
+        {{
+          (weatherStateService.mostRecentWeather | async)?.current?.sunset
+            | date : "shortTime"
+        }}
+      </p>
+      <p class="lower-text">Sunset</p>
+    </div>
+    <div class="box">
+      <p class="upper-text">
         {{
           (weatherStateService.mostRecentWeather | async)?.current?.feelsLike
             | number : "1.0-0"
-        }}°
-      </div>
+        }}
+      </p>
+      <p class="lower-text">Feels Like</p>
     </div>
-    <div class="d-flex flex-row justify-content-between">
-      <span>UV Index</span>
-      <div class="w-50">
-        {{ (weatherStateService.mostRecentWeather | async)?.current?.uvIndex }}
-      </div>
+    <div class="box">
+      <p class="upper-text">
+        {{ (weatherStateService.mostRecentWeather | async)?.current?.humidity
+        }}<span> %</span>
+      </p>
+      <p class="lower-text">Humidity</p>
+    </div>
+    <div class="box">
+      <p class="upper-text">
+        {{
+          (weatherStateService.mostRecentWeather | async)?.current?.windSpeed
+            | number : "1.0-0"
+        }}<span> mph</span>
+      </p>
+      <p class="lower-text">Wind</p>
     </div>
   </div>
   <hr />
-  <div class="display-6 pb-4">Next 5 days</div>
-  <div class="container d-flex flex-column justify-content-between h-25">
+  <div class="heading">Next 5 days</div>
+  <div>
     <ng-container
       *ngFor="
-        let weather of (weatherStateService.mostRecentWeather | async)?.daily
-          | slice : 1 : 6;
+        let weather of (weatherStateService.mostRecentWeather | async)?.daily;
         index as i
       "
     >
-      <app-weather-data-row [weather]="weather"></app-weather-data-row>
+      <app-weather-data-daily [weather]="weather"></app-weather-data-daily>
     </ng-container>
   </div>
 </div>
