--- a/src/app/home/components/weather-data-daily/weather-data-daily.component.html
+++ b/src/app/home/components/weather-data-daily/weather-data-daily.component.html
@@ -16,7 +16,7 @@
     <p class="lower-text">LOW</p>
   </div>
   <div class="box">
-    <p class="upper-text">{{ weather.humidity }}</p>
+    <p class="upper-text">{{ weather.humidity }} %</p>
     <p class="lower-text">HUMIDITY</p>
   </div>
 
