--- a/src/app/home/components/side-bar/side-bar.component.css
+++ b/src/app/home/components/side-bar/side-bar.component.css
@@ -4,20 +4,22 @@
 .heading {
   font-size: 2rem;
   font-weight: 400;
-  text-shadow: 2px 2px 4px #4e4e4e;
+  text-shadow: 2px 2px 2px #4e4e4e;
 }
 
 input[type="text"] {
   color: rgba(255, 255, 255, 0.9);
+  text-shadow: 2px 2px 4px #4e4e4e;
 }
 
 ::placeholder {
-  color: rgba(111, 111, 111, 0.5);
-  opacity: 1;
+  color: rgba(199, 199, 199, 0.779);
 }
+
 .blur {
   background-color: rgba(3, 30, 73, 0.25);
   backdrop-filter: blur(10px);
+  height: 100%;
 }
 
 .padding {
